@@ -42,6 +42,8 @@
   * Add a sha arg to write_pack_object to incrementally compute a SHA.
     (Dave Borowitz)
 
+  * Include offset in PackStreamReader results. (Dave Borowitz)
+
  TEST CHANGES
 
   * If setuptools is installed, "python setup.py test" will now run the testsuite.
